--- a/public/html/mywork/testlink.html
+++ b/public/html/mywork/testlink.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>链接测试</title>
+    <style>
+        .test{
+            outline-color: red
+        }
+    </style>
 </head>
 
 <body>
