--- a/public/html/mywork/sendemail.html
+++ b/public/html/mywork/sendemail.html
@@ -10,6 +10,34 @@
         * {
             box-sizing: border-box;
         }
+
+        .sending-message {
+            border: solid 1px rgba(153, 153, 153, 1.00);
+            background-color: rgba(226, 244, 197, 1.00);
+            position: fixed;
+            top: 0em;
+            left: 50%;
+            transform: translate(-50%,0);
+            z-index: 2;
+        }
+        .row{
+            display: flex;
+            flex-wrap: nowrap;
+            margin: .3em 0;
+            padding: .2em 0;
+            background-color: rgba(210,230,178,1.00);
+        }
+        .attach-name{
+            padding: 0 1em;
+            
+        }
+        .sending {
+            margin:auto 0 auto auto;
+            width: 6em;
+            text-align: center;
+            vertical-align: middle;
+            flex-shrink: 0;
+        }
     </style>
 </head>
 
@@ -49,6 +77,17 @@
             <textarea id="attachments-list" cols="70" rows="15"></textarea>
         </div>
         <button id="sendemail">发送邮件</button>
+        <div class="sending-message">
+            <div class="row">
+                <div class="attach-name">邮件主题</div>
+                <div class="sending">发送状态</div>
+            </div>
+            <div class="row">
+                <div class="attach-name">元素不会建立一个新的本地堆叠上下文。当前堆叠上下文</div>
+                <div class="sending">正在发送</div>
+            </div>
+            <button style="width: 100%;margin-top: 1em;">关闭</button>
+        </div>
     </main>
     <script src="/myJS/axios/axios.0.19.0.min.js"></script>
     <script>
@@ -93,7 +132,7 @@
                 }
             });
             //"发送邮件"按钮的单击事件处理
-            document.getElementById('sendemail').addEventListener('click', event => {
+            document.getElementById('sendemail').addEventListener('click', async function (event) {
                 let imgsArray = document.getElementById('imgs-list').value.split("\n").filter(item => item.trim().length > 0);
                 let attachmentArray = document.getElementById('attachments-list').value.split("\n").filter(item => item.trim().length > 0);
                 let basepath = document.getElementById('path').value.replace(/\\/g, "/");
@@ -116,18 +155,22 @@
                         message.html = `<img src="cid:${i}"/>`;
                         message.attachments[1] = {
                             path: basepath + imgsArray[n],
-                            cid: i+''
+                            cid: i + ''
                         };
                     }
                     sendMessageArray.push(message);
                 }
                 //console.log(sendMessageArray);
-                axios.post('/api/mywork/sendemail', sendMessageArray).then(res => {
+                /* axios.post('/api/mywork/sendemail', sendMessageArray).then(res => {
                    // console.log(res);
                     alert(JSON.stringify(res.data));
                 }).catch(err => {
                     alert(err);
-                });
+                }); */
+                for (let i = 0; i < sendMessageArray.length; i++) {
+                    let res = await axios.post('/api/mywork/sendemail', sendMessageArray[i]);
+
+                }
             });
 
             let messageModel = {
