--- a/public/html/mywork/sendemail.html
+++ b/public/html/mywork/sendemail.html
@@ -11,28 +11,37 @@
             box-sizing: border-box;
         }
 
+        .message-contain {
+            position: fixed;
+            top: 0em;
+            left: 0em;
+            z-index: 2;
+            width: 100%;
+            text-align: center;
+        }
+
         .sending-message {
             border: solid 1px rgba(153, 153, 153, 1.00);
             background-color: rgba(226, 244, 197, 1.00);
-            position: fixed;
-            top: 0em;
-            left: 50%;
-            transform: translate(-50%,0);
-            z-index: 2;
+            display: inline-block;
+            margin: auto;
         }
-        .row{
+
+        .row {
             display: flex;
             flex-wrap: nowrap;
             margin: .3em 0;
             padding: .2em 0;
-            background-color: rgba(210,230,178,1.00);
+            background-color: rgba(210, 230, 178, 1.00);
         }
-        .attach-name{
+
+        .attach-name {
             padding: 0 1em;
-            
+
         }
+
         .sending {
-            margin:auto 0 auto auto;
+            margin: auto 0 auto auto;
             width: 6em;
             text-align: center;
             vertical-align: middle;
@@ -77,16 +86,18 @@
             <textarea id="attachments-list" cols="70" rows="15"></textarea>
         </div>
         <button id="sendemail">发送邮件</button>
-        <div class="sending-message">
-            <div class="row">
-                <div class="attach-name">邮件主题</div>
-                <div class="sending">发送状态</div>
+        <div class="message-contain">
+            <div class="sending-message">
+                <div class="row">
+                    <div class="attach-name">邮件主题</div>
+                    <div class="sending">发送状态</div>
+                </div>
+                <div class="row">
+                    <div class="attach-name">元素不会建立一个新的本地堆叠上下文。当前堆叠上下文</div>
+                    <div class="sending">正在发送</div>
+                </div>
+                <button id="button-close" style="width: 100%;margin-top: 1em;">关闭</button>
             </div>
-            <div class="row">
-                <div class="attach-name">元素不会建立一个新的本地堆叠上下文。当前堆叠上下文</div>
-                <div class="sending">正在发送</div>
-            </div>
-            <button style="width: 100%;margin-top: 1em;">关闭</button>
         </div>
     </main>
     <script src="/myJS/axios/axios.0.19.0.min.js"></script>
@@ -172,7 +183,10 @@
 
                 }
             });
-
+            //消息窗的关闭按钮
+            document.getElementById("button-close").addEventListener('click', event => {
+                document.querySelector('.message-contain').style.display = 'none';
+            })
             let messageModel = {
                 from: 'wsx1887@qq.com',
                 to: 'wsx1887@qq.com',
