--- a/public/html/mywork/sendemail.html
+++ b/public/html/mywork/sendemail.html
@@ -18,13 +18,33 @@
             z-index: 2;
             width: 100%;
             text-align: center;
+            display: none;
+        }
+
+        .inline-block {
+            display: inline-block;
+            border: solid 1px rgba(153, 153, 153, 1.00);
+            background-color: rgba(226, 244, 197, 1.00);
+            border-radius: .5em;
+            overflow: hidden;
         }
 
         .sending-message {
-            border: solid 1px rgba(153, 153, 153, 1.00);
-            background-color: rgba(226, 244, 197, 1.00);
+            border-top-left-radius: .5em;
+            border-top-right-radius: .5em;
             display: inline-block;
-            margin: auto;
+            margin: 0;
+            position: relative;
+            max-height: 90vh;
+            overflow-y: auto;
+            padding-bottom: .5em;
+        }
+
+        #button-close {
+            display: block;
+            width: 100%;
+            border: none;
+            height: 2em;
         }
 
         .row {
@@ -37,7 +57,7 @@
 
         .attach-name {
             padding: 0 1em;
-
+            min-width: 6em;
         }
 
         .sending {
@@ -90,17 +110,20 @@
         <input type="text" required id="password">
         <button id="sendemail">发送邮件</button>
         <div class="message-contain">
-            <div class="sending-message">
+            <div class="inline-block">
                 <div class="row">
                     <div class="attach-name">邮件主题</div>
                     <div class="sending">发送状态</div>
                 </div>
-                <div class="row">
-                    <div class="attach-name">元素不会建立一个新的本地堆叠上下文。当前堆叠上下文</div>
-                    <div class="sending">正在发送</div>
+                <div class="sending-message">
+                    <div class="row">
+                        <div class="attach-name">test test test</div>
+                        <div class="sending">正在发送</div>
+                    </div>
                 </div>
-                <button id="button-close" style="width: 100%;margin-top: 1em;">关闭</button>
+                <button id="button-close">关闭</button>
             </div>
+
         </div>
     </main>
     <script src="/myJS/axios/axios.0.19.0.min.js"></script>
@@ -174,17 +197,34 @@
                     }
                     sendMessageArray.push(message);
                 }
-                //console.log(sendMessageArray);
-                /* axios.post('/api/mywork/sendemail', sendMessageArray).then(res => {
-                   // console.log(res);
-                    alert(JSON.stringify(res.data));
-                }).catch(err => {
-                    alert(err);
-                }); */
+                //添加消息框内容并显示
+                let divSendingMessage = document.querySelector('.sending-message');
+                divSendingMessage.innerHTML = '';
+                let elementList = [];//用于更改‘发送状态’
+                for (let i = 0; i < sendMessageArray.length; i++) {
+                    let divRow = document.createElement('div');
+                    divRow.className = 'row';
+                    divRow.innerHTML = `<div class="attach-name">${sendMessageArray[i].subject}</div>`;
+                    let divSending=document.createElement('div');
+                    divSending.className='sending';
+                    divSending.innerHTML='已准备';
+                    divRow.appendChild(divSending);
+                    divSendingMessage.appendChild(divRow);
+                    elementList[i]=divSending;
+                }
+                document.querySelector('.message-contain').style.display = 'block';
                 let password = document.getElementById('password').value;
                 for (let i = 0; i < sendMessageArray.length; i++) {
+                    elementList[i].innerHTML='正在发送';
                     let res = await axios.post('/api/mywork/sendemail', { message: sendMessageArray[i], password });
-
+                    if (res.data.finishType === 2) {
+                        alert(res.data.message);
+                        break;
+                    }else if(res.data.finishType===0){
+                        elementList[i].innerHTML='发送成功';
+                    }else{
+                        elementList[i].innerHTML='失败';
+                    }
                 }
             });
             //消息窗的关闭按钮
