--- a/public/test.html
+++ b/public/test.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     js测试页
-        <script src="./myJS/axios/axios.0.19.0.min.js"></script>
+    <script src="/myJS/axios/axios.0.19.0.js"></script>
 </body>
 </html>
