--- a/public/html/mywork/sendemail.html
+++ b/public/html/mywork/sendemail.html
@@ -17,6 +17,8 @@
             left: 0em;
             z-index: 2;
             width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0,.3);
             text-align: center;
             display: none;
         }
@@ -169,7 +171,7 @@
                 }
             });
             //"发送邮件"按钮的单击事件处理
-            document.getElementById('sendemail').addEventListener('click', async function (event) {
+            document.getElementById('sendemail').addEventListener('click', async function sendemailArray(event) {
                 let imgsArray = document.getElementById('imgs-list').value.split("\n").filter(item => item.trim().length > 0);
                 let attachmentArray = document.getElementById('attachments-list').value.split("\n").filter(item => item.trim().length > 0);
                 let basepath = document.getElementById('path').value.replace(/\\/g, "/");
@@ -216,9 +218,11 @@
                 let password = document.getElementById('password').value;
                 for (let i = 0; i < sendMessageArray.length; i++) {
                     elementList[i].innerHTML='正在发送';
+                    
                     let res = await axios.post('/api/mywork/sendemail', { message: sendMessageArray[i], password });
                     if (res.data.finishType === 2) {
                         alert(res.data.message);
+                        document.querySelector('.message-contain').style.display = 'none';
                         break;
                     }else if(res.data.finishType===0){
                         elementList[i].innerHTML='发送成功';
