--- a/public/html/文档/jsonwebtoken-用户登录状态验证.html
+++ b/public/html/文档/jsonwebtoken-用户登录状态验证.html
@@ -16,9 +16,19 @@
             border: solid 1px #666;
             padding: .25em;
         }
-
+        ul{
+            list-style-type: none;
+            padding-left: 0;
+        }
         .pl-1 {
             padding-left: 1em;
+        }
+        .pl-0{
+            padding-left: 0em;
+        }
+        li h3{
+            background-color: rgba(248,202,142,1.00);
+            padding: .2em;
         }
     </style>
 </head>
@@ -35,7 +45,7 @@
         </p>
         <div class="content">
             <h2>使用</h2>
-            <ol>
+            <ul>
                 <li>
                     <h3>签发：jwt.sign(payload, secretOrPrivateKey[, options, callback])</h3>
                     <p>当提供回调函数时，此方法是异步方法，接收的参数是 err 和 jwt （ jwt.sign 生成的值）。</p>
@@ -67,7 +77,7 @@
                             <tr>
                                 <td class="pl-1">algorithm</td>
                                 <td></td>
-                                <td>（默认值：HS256）</td>
+                                <td>包含允许的算法名称的字符串列表。例如，["HS256", "HS384"]。（默认值：HS256）</td>
                             </tr>
                             <tr>
                                 <td class="pl-1">expiresIn</td>
@@ -123,15 +133,179 @@
                             </tr>
                         </tbody>
                     </table>
-                    <mark>起始时间 iat</mark>
+                    <p> payload 为对象时，也可以包含设置选项，但同一个选项，<strong>不能在 payload 和 Option 里面同时出现</strong>。</p>
+                    <table>
+                        <caption>payload 中允许的选项</caption>
+                        <thead>
+                            <tr>
+                                <th>属性</th>
+                                <th>类型</th>
+                                <th>描述</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>iss</td>
+                                <td>String</td>
+                                <td>(issuer)：签发人</td>
+                            </tr>
+                            <tr>
+                                <td>exp</td>
+                                <td>Number</td>
+                                <td>(expiration time)：过期时间。在 payload 这里和在 Option 里的设置<strong>不一样</strong>，
+                                    表示从 1970-01-01T00：00：00Z UTC 到指定的 UTC 日期/时间的秒数，忽略闰秒。
+                                    例如1小时后过期：exp: Math.floor(Date.now() / 1000) + (60 * 60) 。
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>sub</td>
+                                <td>String</td>
+                                <td>(subject)：主题</td>
+                            </tr>
+                            <tr>
+                                <td>aud</td>
+                                <td>String</td>
+                                <td>(audience)：受众</td>
+                            </tr>
+                            <tr>
+                                <td>nbf</td>
+                                <td>Number</td>
+                                <td>(Not Before)：生效时间。nbf 时间之前 jwt 无效，验证会失败。格式同本表格上面 exp 。</td>
+                            </tr>
+                            <tr>
+                                <td>iat</td>
+                                <td>Number</td>
+                                <td>(Issued At)：自定义的签发时间。不设置时，签发时间为当前。格式同本表格上面 exp 。</td>
+                            </tr>
+                            <tr>
+                                <td>jti</td>
+                                <td></td>
+                                <td>(JWT ID)：编号</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </li>
                 <li>
                     <h3>验证：jwt.verify(token, secretOrPublicKey[, options, callback])</h3>
+                    <p>如果提供了回调，则此方法为异步函数，否则为同步函数。</p>
+                    <p>回调函数的参数为 err 和 payload 。如果验证不通过，则调用 err 。如果验证通过，则以解码后的 payload 调用函数。</p>
+                    <p>当为同步函数时，如果验证通过，则返回解码后的 payload 。如果验证不通过，则<strong>抛出错误</strong>。</p>
+                    <table>
+                        <caption>参数说明</caption>
+                        <thead>
+                            <tr>
+                                <th>属性</th>
+                                <th>类型</th>
+                                <th>描述</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>token</td>
+                                <td>String</td>
+                                <td>签发的 jwt 。</td>
+                            </tr>
+                            <tr>
+                                <td>secretOrPublicKey</td>
+                                <td>String|Buffer|Object</td>
+                                <td>用于解密的密钥。必须和加密的密钥一样。</td>
+                            </tr>
+                            <tr>
+                                <td colspan="3">Option:</td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">algorithms</td>
+                                <td>String</td>
+                                <td>包含允许的算法名称的字符串列表。例如，["HS256", "HS384"]。</td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">audience</td>
+                                <td>String</td>
+                                <td>受众。</td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">complete</td>
+                                <td>Boolean</td>
+                                <td>是否返回已解码对象的所有内容，而不是仅返回有效负载的常用内容。</td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">issuer</td>
+                                <td>String</td>
+                                <td>签发人。</td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">ignoreExpiration</td>
+                                <td>Boolean</td>
+                                <td>是否忽略过期时间。</td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">ignoreNotBefore</td>
+                                <td>Boolean</td>
+                                <td>是否忽略生效时间。</td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">subject</td>
+                                <td>String</td>
+                                <td>主题。</td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">clockTolerance</td>
+                                <td>Number</td>
+                                <td>检查nbf（notBefore）和exp（expiresIn）声明时可以容忍的秒数，以处理不同服务器之间的小时钟差异。</td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">maxAge</td>
+                                <td>String|Number</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">clockTimestamp</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td class="pl-1">nonce</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </li>
                 <li>
                     <h3>取得负载：jwt.decode(token [, options])</h3>
+                    <p>解码 jwt ，返回负载 payload ，而不验证签名是否有效。</p>
+                    <table>
+                        <caption>参数说明</caption>
+                        <thead>
+                            <tr>
+                                <th>属性</th>
+                                <th>类型</th>
+                                <th>描述</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>token</td>
+                                <td>String</td>
+                                <td>签发的 jwt 。</td>
+                            </tr>
+                            <tr>
+                                <td colspan="3">Option</td>
+                            </tr>
+                            <tr>
+                                <td>json</td>
+                                <td>Boolean</td>
+                                <td>是否强制JSON.parse在有效负载上，即使标头不包含"typ":"JWT"。</td>
+                            </tr>
+                            <tr>
+                                <td>complete</td>
+                                <td>Boolean</td>
+                                <td>是否返回带有解码的有效负载和标头的对象。</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </li>
-            </ol>
+            </ul>
         </div>
     </main>
 </body>
